--- a/03-task-manager/starter/package.json
+++ b/03-task-manager/starter/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^5.13.19"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^1.14.9"
   }
 }
